erDiagram
%% Terminal is not stored in Database, but in a file
    Terminal {
        admin_password varchar(255)
    }

    Prize {
        id int PK
        type varchar(255)
        name varchar(255)
        description varchar(255)
        quantity int
    }

    Ticket {
        id int PK
        code varchar(255) UK
        created_at date
        drawn_at date
        is_printed boolean
        is_winning boolean
        has_been_claimed boolean
        prize_id int FK
        customer_id int FK
    }

    Customer {
        id int PK
        firstname varchar(255)
        lastname varchar(255)
        email varchar(255)
        pin_code int(4)
        phone_number varchar(255) UK
        address varchar(255)
        locality_id int FK
    }

    Locality {
        id int PK
        name varchar(255)
        postcode int
        province_id int FK
    }

    Province {
        id int PK
        name varchar(255)
    }

    Customer }o--|| Locality: "lives in"
    Locality }o--|| Province: "is in"
    Ticket }o--o| Customer: "has"
    Ticket }o--o| Prize: "can win"
